# skid_steering_odometry

./: README.md
robotics_hw1/: CMakeLists.txt  package.xml
skid_steering/: CMakeLists.txt  package.xml
skid_steering/cfg/: SkidSteering.cfg
skid_steering/config/: skid_param.yaml
skid_steering/include/skid_steering/: odometry.h  skid_steering.h
skid_steering/launch/: dyanmic_test.launch  skid_steering.launch  visualize_bag.launch
skid_steering/msg/: CustomOdom.msg
skid_steering/rviz/: visualize_bag.rviz
skid_steering/src/: dyanamic_test.cpp  odometry.cpp  skid_steering.cpp  static_tf_publisher.cpp  tf_publisher.cpp
skid_steering/srv/: ResetOdomPose.srv  SetOdomPose.srv
